# DigiByte-AdamantineOS

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  INVARIANTS.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/: pull_request_template.md
contracts/: mobile_request_v2.schema.json  mobile_response_v2.schema.json  proposal_review_receipt_v1.schema.json  upgrade_proposal_v3.schema.json
docs/: ADAMANTINEOS_COMBINED_CONTEXT_HASH_CONTRACT.md  ADAMANTINEOS_FINAL_PROOF_PACK_INDEX.md  ADAMANTINEOS_FULL_INTEGRATION_BUILD_LEDGER.md  ADAMANTINEOS_INTEGRATION_HARNESS_SCOPE.md  ADAMANTINEOS_MILESTONE_16B_SHIELD_ORCHESTRATOR_RECEIPT_CONTRACT_HARNESS.md  ADAMANTINEOS_MILESTONE_16C_SHIELD_COMPONENT_BASELINE_THROUGH_ORCHESTRATOR.md  ADAMANTINEOS_MILESTONE_16D_Q_ID_EXTERNAL_BASELINE_COMPATIBILITY.md  ADAMANTINEOS_MILESTONE_16E_ADAPTIVE_CORE_EXTERNAL_BASELINE_COMPATIBILITY.md  ADAMANTINEOS_MILESTONE_16F_AI_GATEWAY_EXTERNAL_BASELINE_COMPATIBILITY.md  ADAMANTINEOS_MILESTONE_16G_FULL_LEVEL4_NEGATIVE_TEST_MATRIX.md  ADAMANTINEOS_MILESTONE_16_LEVEL4_MULTI_REPO_SCOPE_LOCK.md  ADAMANTINEOS_MILESTONE_17_REBRAND_PROOF_PACK_AND_DOCS_ALIGNMENT.md  ADAMANTINEOS_MILESTONE_18_AUTHORIZED_RED_TEAM_FINDINGS.md  ADAMANTINEOS_MILESTONE_18_CLAUDE_REVIEW_TRIAGE.md  ADAMANTINEOS_MILESTONE_18_SECOND_REVIEW_HANDOFF.md  ADAMANTINEOS_MILESTONE_19_FINAL_RELEASE_GATE.md  ADAMANTINEOS_MILESTONE_19_TAG_DECISION.md  ADAMANTINEOS_QID_CANONICAL_JSON_PROFILE.md  ADAMANTINEOS_REMAINING_BOUNDARY_INTEGRATION_PLAN.md  ADAMANTINEOS_REPRODUCIBLE_AUDIT_GUIDE.md  ADAMANTINEOS_SHIELD_RUNTIME_BOUNDARY_LOCK.md  ADAMANTINEOS_SHIELD_V3_FIXTURE_AND_NEGATIVE_TEST_PLAN.md  ADAMANTINEOS_SHIELD_V4_PQC_VERIFIER.md  ADAMANTINEOS_SHIELD_V4_REAL_CRYPTO_BACKEND.md  ADAMANTINEOS_SHIELD_V4_TEST_MATRIX.md  ADAMANTINEOS_SHIELD_V4_THREAT_MODEL.md  ADAMANTINEOS_V3_0_0_RELEASE_NOTES.md  ADAPTIVE_CORE_GOVERNANCE_FLOW.md  ARCHITECTURE.md  Adamantine_v1.5.0_Roadmap.md  CONTEXT_HASH_SPEC.md  CONTRACT_MANIFEST_v0_1.json  DECISION_AUTHORITY_EXECUTION.md  DEVICE_LOSS_AND_RECOVERY_MODEL.md  DURABLE_NONCE_STORE_INTEGRATION.md  EXTERNAL_INTERFACES.md  (+26 more)
(+345 files in other folders)
