[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adamantine-wallet-os"
version = "1.4.0"
description = "Deterministic security decision engine for DigiByte wallets."
authors = [
    { name = "DarekDGB" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config --cov=src --cov-report=term-missing --cov-fail-under=90"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
fail_under = 90
